# audio-reverse-quiz

./: .env.example  .gitignore  pyproject.toml
app/: api.py  main.py  parsing.py  schemas.py  settings.py  web.py
backend/src/: main.py
frontend/: README.md  package.json  quasar.config.js
frontend/src/components/: MainToolbar.vue  SearchField.vue
frontend/src/layouts/: MainLayout.vue
src/: api.py  main.py
src/pages/: IndexPage.vue
src/stores/: Core.js
web/: index.html  package.json
web/_old/src/: App.vue
web/_old/src/components/: SearchForm.vue
web/_old/src/plugins/: quasar.js
web/src/: App.tsx  App.vue  index.css  main.js  quasar-variables.sass
web/src/components/: Footer.vue  Header.vue  SearchForm.vue  TrackItem.vue
web/src/pages/: Index.vue
web/src/plugins/: pinia.js
web/src/stores/: core.js  player.js
