[tool.poetry]
name = "audio-reverse-quiz-server"
version = "0.1.0"
description = ""
authors = ["kravecil <brightsky@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
bs4 = "^0.0.2"
httpx = "^0.28.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
